--- a/opusapp/src/main/res/values-fr/strings.xml
+++ b/opusapp/src/main/res/values-fr/strings.xml
@@ -35,7 +35,7 @@
     <string name="alert_dialog_message_search_path_exists">Ce dossier est déjà dans la liste des dossier à analyser ou à exclure.</string>
     <string name="alert_dialog_title_add_to_playlist">@string/menuitem_label_add_to_playlist</string>
     <string name="alert_dialog_title_premium_hint">"Période d'essai terminée."</string>
-    <string name="alert_dialog_message_premium_hint">"Des publicités vont être affiché occasionnelement à moins que vous n'achetiez le mode premium."</string>
+    <string name="alert_dialog_message_premium_hint">"Des publicités vont être affiché occasionnelement à moins que vous n'achetiez la version premium."</string>
     <string name="alert_dialog_title_premium_positive_button">Acheter le mode premium</string>
     <string name="alert_dialog_title_premium_negative_button">Ignorer</string>
     <string name="alert_dialog_title_type_of_library">Type de bibliothèque</string>
@@ -213,13 +213,7 @@
     <!-- Setup -->
     <string name="label_setup_step1_title">Commençons la configuration</string>
     <string name="label_setup_step1_description">"La mise en place de l'application ne devrait prendre que quelques instants."</string>
-    <string name="label_setup_verifying_premium_title">Preparation en cours&#8230;</string>
-    <string name="label_setup_verifying_premium_description">OpusAmp vérifie si vous êtes un utilisateur premium.</string>
     <string name="label_setup_privacy_policy_link">Politique de confidentialité</string>
-    <string name="label_setup_valid_premium_title">Mode premium</string>
-    <string name="label_setup_valid_premium_description">Vous avez déjà acquis le mode premium.\n\nProfitez de votre musique sans aucunes limites !</string>
-    <string name="label_setup_invalid_premium_title">Mode premium</string>
-    <string name="label_setup_invalid_premium_description">Vous n\'avez pas acquis le mode premium.\nVous pourrez le faire plus tard dans les paramètres de l\'application.\n\nSans le mode premium, vous pouvez utiliser OpusAMP sans limites, cependant après une période de 15 jours, des publicités seront affiché de temps en temps.</string>
     <string name="label_setup_storage_title">Stockage</string>
     <string name="label_setup_storage_description">Définis l\'emplacement de la bibliothèque par défaut sur votre appareil Android&#8482;.\nVous pouvez personnaliser les emplacements ou ajouter d\'autres bibliothèques plus tard.</string>
     <string name="label_setup_scan_whole_storage">Toute la mémoire</string>
