Updated: menu in main activity. Fixed: deprecation in build.gradle.

--- a/opusapp/src/main/res/values-fr/strings.xml
+++ b/opusapp/src/main/res/values-fr/strings.xml
@@ -138,10 +138,10 @@
 
     <string name="drawer_section_label_media_management">Gestion des médias</string>
     <string name="drawer_section_label_label_settings">Paramètres</string>
-    <string name="drawer_item_label_manage_libraries">Liste des bibliothèques</string>
+    <string name="drawer_item_label_manage_libraries">Gestion des bibliothèques</string>
     <string name="drawer_item_label_library_soundfx">Effets sonores</string>
     <string name="drawer_item_label_library_settings">Paramètres de la bibliothèque</string>
-    <string name="drawer_item_label_application_settings">Paramètres de l\'application</string>
+    <string name="drawer_item_label_application_settings">Paramètres généraux</string>
 
     <string name="searchview_query_hint">Recherche</string>
 
