--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -136,10 +136,10 @@
 
     <string name="drawer_section_label_media_management">Media management</string>
     <string name="drawer_section_label_label_settings">Settings</string>
-    <string name="drawer_item_label_manage_libraries">Libraries list</string>
+    <string name="drawer_item_label_manage_libraries">Libraries management</string>
     <string name="drawer_item_label_library_soundfx">Sound effects</string>
     <string name="drawer_item_label_library_settings">Library settings</string>
-    <string name="drawer_item_label_application_settings">Application settings</string>
+    <string name="drawer_item_label_application_settings">Global settings</string>
 
     <string name="searchview_query_hint">Search</string>
 
