Updated: small changes in ffmpeg build script Updated: ffmpeg to 2.4.3 Updated: permissions for premium version. Updated: project structure (removed licensing module, now, that's code specific to free-flavor).

--- a/opusapp/src/flavor-free/res/values/strings.xml
+++ b/opusapp/src/flavor-free/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <!-- Application name -->
     <string name="application_label" translatable="false">OpusAMP Free</string>
+
+    <string name="mobiletrial_keystore_passwd" translatable="false">OpusAppLicensing</string>
 </resources>
