--- a/opusapp/src/main/res/values-fr/strings.xml
+++ b/opusapp/src/main/res/values-fr/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Service -->
     <string name="service_label">Lecteur de médias audio</string>
+    <string name="notification_fallback_info_format">%1$s - %2$s</string>
 
     <!-- Widget -->
     <string name="widget_label_4x1">Lecteur Audio 4x1</string>
