--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Service -->
     <string name="service_label">Audio Media Player</string>
+    <string name="notification_fallback_info_format">%1$s - %2$s</string>
 
     <!-- Widget -->
     <string name="widget_label_4x1">Audio Player (4x1)</string>
