--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="activity_label_deezer_signout">Disconnect</string>
 
     <!-- Dialogs -->
+    <string name="alert_dialog_button_edit">"Edit"</string>
     <string name="alert_dialog_title_album_properties">Album properties</string>
     <string name="alert_dialog_title_media_properties">Media properties</string>
     <string name="alert_dialog_title_playlist_is_empty">Playlist is empty</string>
@@ -179,6 +180,7 @@
 
     <!-- Content properties -->
     <string name="label_metadata_unknown">unknown</string>
+    <string name="label_metadata_album_title">Album name</string>
     <string name="label_metadata_album_track_count">Track count</string>
     <string name="label_metadata_album_duration">Duration</string>
 
@@ -193,7 +195,8 @@
         <item quantity="other">Genres</item>
     </plurals>
 
-    <string name="label_metadata_media_uri">Path</string>
+    <string name="label_metadata_media_path">Path</string>
+    <string name="label_metadata_media_filename">File name</string>
     <string name="label_metadata_media_duration">Duration</string>
     <string name="label_metadata_media_bitrate">Bitrate</string>
     <string name="label_metadata_media_samplerate">Samplerate</string>
