--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,12 @@
 *** Bugs ***
 ~ A tester : édition de tags supprime la pochette embarquée ???
 ! Désactivation de l'égaliseur quand on entre dans les paramètres d'une bibliothèque
-! Bug quand on ajoute une bibliothèque on qu'on lis depuis celle ci.
+! Ajout d'une bibliothèque on qu'on lis depuis celle ci.
+! Album éditables alors que toutes les pistes sont en lecture seule.
+! Force close branchement jack ?
 
 *** Planned updates ***
 - Affichage info codecs/bitrate/samplerate
-- Tag editing from current playlist UI.
 - Improved Bluetooth support.
 - Chromecast audio output.
 - Backup of library settings.
@@ -19,6 +20,7 @@
 Update 18:
 Added: Management of EQ presets.
 Added: Current media duration in player UI.
+Added: Tag editing from current playlist UI.
 Updated: Changed playlist icon to a more appropriate one.
 Updated: Moved playback options (like equalizer and auto pause) to global overflow menu.
 Fixed: Refresh menu item not updated correctly.
