--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,17 +16,23 @@
 
 *** Changelog ***
 
+
+
 Update 18:
 Added: Management of EQ presets.
 Added: Media duration in player UI.
-Added: Media properties from player UI.
-Added: support for OGG embedded covers.
+Added: Support for OGG embedded covers.
 Updated: New playlist icon.
+Updated: Improved player layouts.
 Updated: Moved playback options to the app main menu.
+Fixed: Media properties not accessible from player UI.
 Fixed: Editable Albums where there is no media file editable.
-Fixed: "Reload" button not updated correctly in some situations.
 Fixed: Wrong text color in (small) notification with Android > 5.0 (API 21).
+
+(not publicly announced) :
+Fixed: "Reload" button not updated correctly in some situations.
 Fixed: Force close on some device with Android <= 4.2 (API 17).
+
 
 Update 16:
 Added: Support for media tags edition (and improved tag viewer look and feel).
