--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="preference_category_title_cache_size">Cache size</string>
     <string name="preference_title_cache_size">Covers</string>
     <string name="preference_title_thumbnail_cache_size">Cover thumbnails</string>
+    <string name="preference_title_embedded_art_cache_size">Embedded covers</string>
     <string name="preference_category_title_maintenance">Maintenance operations</string>
     <string name="preference_title_optimize_database">Optimize database</string>
     <string name="preference_title_clear_cache">Clear cache memory</string>
